force-app/main/default/objects/Activity_History__c/fields/Call_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Call_Bucket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Bucket</label>
    <referenceTo>Call_Line__c</referenceTo>
    <relationshipLabel>Activity Histories</relationshipLabel>
    <relationshipName>Activity_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>