force-app/main/default/objects/Activity_History__c/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <label>Campaign Type</label>
    <length>125</length>
    <type>Text</type>
</CustomField>